# astrolabs

./: .hgignore  .hgtags  .todo.xml  CMakeLists.txt  LICENSE.md  README.md  astrolabs.pro  build.bat  resources.qrc  shortcuts.txt
.hg/: dirstate  hgrc  thgstatus  undo.desc
.hg/cache/: branch2-served  hgtagsfnodes1  rbc-names-v1  rbc-revs-v1  tags2-visible
.hg/store/: 00changelog.i  00manifest.i  fncache  undo  undo.backup.phaseroots
.hg/store/data/: _c_make_lists.txt.i  _l_i_c_e_n_s_e.md.i  _r_e_a_d_m_e.md.i  astrolabs.pro.i  build.bat.i  lab__hrdiagram.cpp.i  lab__hrdiagram.h.i  lab__hrdiagram.ui.i  m15gc.png.d  m15gc.png.i  main.cpp.i  mainwindow.cpp.i  mainwindow.h.i  mainwindow.ui.i  readme.txt.i  resources.qrc.i  scenegraphview.h.i  shortcuts.txt.i  star.h.i  star__image.cpp.i  star__image.h.i  star__series__data.h.i  welcome__screen.cpp.i  welcome__screen.h.i  welcome__screen.ui.i  ~2ehgignore.i  ~2ehgtags.i  ~2etodo.xml.i
.hg/store/data/assets/backgrounds/: _abell__370.jpg.d  _abell__370.jpg.i  _abell__370__edited.png.d  _abell__370__edited.png.i  _abell__370__edited.xcf.d  _abell__370__edited.xcf.i  galaxy__1.png.i  galaxy__2.png.i  galaxy__3.png.i  galaxy__4.png.i  galaxy__5.png.i  m15gc.png.i  ngc7742.png.i  (+1 more)
.hg/store/data/config/: astro__1001__kiosk.cfg.i
.hg/store/data/dm/: _c_make_lists.txt.i  absorption__lines.h.i  astrolabs__dm.pro.i  dark__matter__lab.cpp.i  dark__matter__lab.h.i  dark__matter__lab.ui.i  dm.rc.i  dm__gui.cpp.i  dm__gui.h.i  dm__main.cpp.i  dm__main.h.i  dm__nodekit.cpp.i  dm__nodekit.h.i  dm__scene__graph.cpp.i  dm__scene__graph.h.i  graph__pulses.h.i  radial__velocity__handler.cpp.i  radial__velocity__handler.h.i  world__scene.h.i
.hg/store/data/expansion/: _c_make_lists.txt.i  astrolabs__expansion.pro.i  expansion.rc.i  expansion.ui.i  expansion__gui.cpp.i  expansion__gui.h.i  expansion__scene.cpp.i  expansion__scene.h.i
.hg/store/data/graphics/: arrow-transition-180.png.i  arrow-transition.png.i  control-stop-square.png.i  control.png.i  cross.png.i  ruler-triangle.png.i
.hg/store/data/hr/: _c_make_lists.txt.i  astrolabs__hr.pro.i  hr.rc.i  hr__diagram.ui.i  hr__main.cpp.i  hr__main.h.i  lab__hrdiagram.cpp.i  lab__hrdiagram.h.i  lab__hrdiagram.ui.i  star.h.i  star__data.h.i  star__image.cpp.i  star__image.h.i
.hg/store/data/include/: camera.hpp.i  gl__util.hpp.i  qt__gestures.h.i  scene__graph.h.i
.hg/store/data/kepler/: _c_make_lists.txt.i  astrolabs__kepler.pro.i  kepler.rc.i  kepler.ui.i  kepler__gui.cpp.i  kepler__gui.h.i  kepler__main.cpp.i  kepler__main.h.i  kepler__node__helpers.cpp.i  kepler__node__helpers.h.i  kepler__scene__graph.cpp.i  kepler__scene__graph.h.i  lab__kepler.cpp.i  lab__kepler.h.i  lab__kepler.ui.i
.hg/store/data/launcher/: _c_make_lists.txt.i  launcher__main.cpp.i  launcher__main.h.i  main__window.ui.i  scenegraph__view.h.i  welcome__screen.cpp.i  welcome__screen.h.i  welcome__screen.ui.i
.hg/store/data/lensing/: _c_make_lists.txt.i  astrolabs__lensing.pro.i  lensed__image.cpp.i  lensed__image.h.i  lensing.rc.i  lensing__lab.cpp.i  lensing__lab.h.i  lensing__lab.ui.i  lensing__main.cpp.i  lensing__main.h.i
.hg/store/data/~2eidea/: code_style_settings.xml.i  vcs.xml.i
assets/icons/: Thumbs.db
assets/models/: NEAR_07_simplified.3ds
assets/shaders/: background.frag  billboard.frag  billboard.vert  billboard_set.frag  billboard_set.vert  bipolar_nebula.frag  cloud.frag  cluster_galaxy.frag  connector_lines.frag  connector_lines.vert  default.frag  default.vert  galaxy_set.frag  galaxy_set.vert  identity.frag  identity.vert  reticule.frag  ruler.frag  ruler.vert  selection_box.frag  sphere.frag  sphere.vert  sprites.frag  sprites.vert  sweep.frag  sweep.vert  textured_sphere.frag
config/: astro_1001_kiosk.cfg
contrib/src/: glew.c
dm/: CMakeLists.txt  absorption_lines.h  astrolabs_dm.pro  dark_matter_lab.ui  dm.rc  dm_gui.cpp  dm_gui.h  dm_scene_graph.cpp  dm_scene_graph.h
expansion/: CMakeLists.txt  astrolabs_expansion.pro  expansion.ui  expansion_gui.cpp  expansion_gui.h  expansion_scene.cpp  expansion_scene.h
hr/: CMakeLists.txt  astrolabs_hr.pro  hr.rc  hr_diagram.ui  hr_main.cpp  hr_main.h  star_image.cpp  star_image.h
include/: gl_util.hpp  scene_graph.h
kepler/: CMakeLists.txt  astrolabs_kepler.pro  kepler.rc  kepler.ui  kepler_gui.cpp  kepler_gui.h  kepler_scene_graph.cpp  kepler_scene_graph.h
(+135 files in other folders)
